[package]
name = "payment-engine"
version = "0.1.0"
edition = "2021"
authors = ["Hameer Abbasi <einstein.edison@gmail.com>"]
description = "A small payment engine."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
csv = "1.1.6"
rust_decimal = { version = "1.26.1", features = ["serde-float"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.34"
